--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower_Shop_Assignment</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;600;700;800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <!-- This is Header Section  -->
+    <header class="banner_container">
+        <div class="banner_title">
+            <h1>Let's make beautiful flowers a part of your life.</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
+                of letters.</p>
+            <button class="btn">Shop Now</button>
+        </div>
+        <div>
+            <img src="./Flower Asset/pngwing 10.png" alt="This is a flower">
+        </div>
+    </header>
 </body>
+
 </html>
