feature section add

--- a/index.html
+++ b/index.html
@@ -28,6 +28,37 @@
             <img src="./Flower Asset/pngwing 10.png" alt="This is a flower">
         </div>
     </header>
+    <!-- This is Main Section  -->
+    <main>
+
+        <!-- This is  feature section  -->
+        <section class="feature_section">
+            <div class="feature_title">
+                <h2>Our Featured Flowers</h2> <br>
+                <small>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</small>
+            </div>
+            <section class="feature_container">
+                <div class="">
+                    <div class="feature_box_1 ">
+                        <img src="./Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <div class="box_caption"><p>Pink Flower Tree</p></div>
+                </div>
+                <div class="">
+                    <div class="feature_box_2">
+                        <img src="./Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <div class="box_caption"><p>Red Flower Tree</p></div>
+                </div>
+                <div class="">
+                    <div class="feature_box_3">
+                        <img src="./Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                    <div class="box_caption"><p>Yellow Flower Tree</p></div>
+                </div>
+            </section>
+        </section>
+    </main>
 </body>
 
 </html>
