creative section left

--- a/index.html
+++ b/index.html
@@ -33,32 +33,102 @@
 
         <!-- This is  feature section  -->
         <section class="feature_section">
-            <div class="feature_title">
+            <div class="main_title">
                 <h2>Our Featured Flowers</h2> <br>
-                <small>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</small>
+                <small>It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout.</small>
             </div>
             <section class="feature_container">
                 <div class="">
                     <div class="feature_box_1 ">
                         <img src="./Flower Asset/pngwing 6.png" alt="">
                     </div>
-                    <div class="box_caption"><p>Pink Flower Tree</p></div>
+                    <div class="box_caption">
+                        <p>Pink Flower Tree</p>
+                    </div>
                 </div>
                 <div class="">
                     <div class="feature_box_2">
                         <img src="./Flower Asset/pngwing 5.png" alt="">
                     </div>
-                    <div class="box_caption"><p>Red Flower Tree</p></div>
+                    <div class="box_caption">
+                        <p>Red Flower Tree</p>
+                    </div>
                 </div>
                 <div class="">
                     <div class="feature_box_3">
                         <img src="./Flower Asset/pngwing 7.png" alt="">
                     </div>
-                    <div class="box_caption"><p>Yellow Flower Tree</p></div>
+                    <div class="box_caption">
+                        <p>Yellow Flower Tree</p>
+                    </div>
                 </div>
             </section>
         </section>
+
+        <!-- Info Box Section  -->
+
+        <section class="info_box_container">
+            <div class="info_box_part">
+                <img src="./Flower Asset/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="info_box_part">
+                <img src="./Flower Asset/Group 58.png" alt="">
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="info_box_part">
+                <img src="./Flower Asset/Group 59.png" alt="">
+                <p>24/7 Free Support.</p>
+            </div>
+        </section>
+
+        <!-- This is Second banner  -->
+
+        <section class="main_banner">
+            <div class="main_banner_title">
+                <h1>Hot Deal ! Sale Up To 25% Off</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when looking at its layout.</p>
+                <div class="main_banner_btn"><button class="btn">Sign Up</button></div>
+            </div>
+            <img src="./Flower Asset/pngwing 8.png" alt="">
+        </section>
+
+        <!-- This is figure Section  -->
+        <figure>
+            <div class="main_title">
+                <h1>Instagram</h1> <br>
+                <small>It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout.</small>
+            </div>
+            <div class="image_container">
+                <img src="./Flower Asset/Flower 01.png" alt="">
+                <img src="./Flower Asset/Rectangle 4.png" alt="">
+                <img src="./Flower Asset/Rectangle 5.png" alt="">
+                <img src="./Flower Asset/Rectangle 6.png" alt="">
+            </div>
+        </figure>
+        <!-- This is Subscription section  -->
+        <section class="subscription_container">
+            <div class="main_title subscription_container_title">
+                <h1>Get The Latest Deals</h1>
+                <small>$30 coupon for first shopping</small>
+            </div>
+            <div class="">
+                <input type="email" placeholder="Enter your email here...">
+                <button class="btn">Subscribe</button>
+            </div>
+        </section>
+
+
     </main>
+
+    <footer>
+        <h2> <span>Flower</span> Shop</h2> <br>
+        <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p> <br> <br>
+        <small>@2020-2023, FlowerShop.com. All rights reserved. </small>
+    </footer>
 </body>
 
 </html>
