full project done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="btn">Shop Now</button>
         </div>
         <div>
-            <img src="./Flower Asset/pngwing 10.png" alt="This is a flower">
+            <img src="./Flower Asset/pngwing 10.png" alt="This is a flower image on banner section">
         </div>
     </header>
     <!-- This is Main Section  -->
@@ -41,7 +41,7 @@
             <section class="feature_container">
                 <div class="">
                     <div class="feature_box_1 ">
-                        <img src="./Flower Asset/pngwing 6.png" alt="">
+                        <img src="./Flower Asset/pngwing 6.png" alt="feature image">
                     </div>
                     <div class="box_caption">
                         <p>Pink Flower Tree</p>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="">
                     <div class="feature_box_2">
-                        <img src="./Flower Asset/pngwing 5.png" alt="">
+                        <img src="./Flower Asset/pngwing 5.png" alt="feature image">
                     </div>
                     <div class="box_caption">
                         <p>Red Flower Tree</p>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="">
                     <div class="feature_box_3">
-                        <img src="./Flower Asset/pngwing 7.png" alt="">
+                        <img src="./Flower Asset/pngwing 7.png" alt="feature image">
                     </div>
                     <div class="box_caption">
                         <p>Yellow Flower Tree</p>
@@ -70,15 +70,15 @@
 
         <section class="info_box_container">
             <div class="info_box_part">
-                <img src="./Flower Asset/Group 57.png" alt="">
+                <img src="./Flower Asset/Group 57.png" alt="info icon">
                 <p>Same Day Delivery. Click & Collect.</p>
             </div>
             <div class="info_box_part">
-                <img src="./Flower Asset/Group 58.png" alt="">
+                <img src="./Flower Asset/Group 58.png" alt="info icon">
                 <p>Fresh Flowers. Local Growers.</p>
             </div>
             <div class="info_box_part">
-                <img src="./Flower Asset/Group 59.png" alt="">
+                <img src="./Flower Asset/Group 59.png" alt="info icon">
                 <p>24/7 Free Support.</p>
             </div>
         </section>
@@ -87,12 +87,12 @@
 
         <section class="main_banner">
             <div class="main_banner_title">
-                <h1>Hot Deal ! Sale Up To 25% Off</h1>
+                <h1>Hot Deal ! Sale Up To 25% <span>Off</span> </h1>
                 <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
                     when looking at its layout.</p>
                 <div class="main_banner_btn"><button class="btn">Sign Up</button></div>
             </div>
-            <img src="./Flower Asset/pngwing 8.png" alt="">
+            <img src="./Flower Asset/pngwing 8.png" alt="main banner image">
         </section>
 
         <!-- This is figure Section  -->
@@ -103,10 +103,10 @@
                     when looking at its layout.</small>
             </div>
             <div class="image_container">
-                <img src="./Flower Asset/Flower 01.png" alt="">
-                <img src="./Flower Asset/Rectangle 4.png" alt="">
-                <img src="./Flower Asset/Rectangle 5.png" alt="">
-                <img src="./Flower Asset/Rectangle 6.png" alt="">
+                <img src="./Flower Asset/Flower 01.png" alt="This is a image about flower">
+                <img src="./Flower Asset/Rectangle 4.png" alt="This is a image about flower">
+                <img src="./Flower Asset/Rectangle 5.png" alt="This is a image about flower">
+                <img src="./Flower Asset/Rectangle 6.png" alt="This is a image about flower">
             </div>
         </figure>
         <!-- This is Subscription section  -->
@@ -121,12 +121,31 @@
             </div>
         </section>
 
+        <section class="feedback_container">
+            <div class="feedback_title">
+                <h2>Feedback</h2> <br>
+                <p>Let Us Know Your Thought . We Respect Our Customers Comment</p>
+                <div class="icon">
+                    <img src="./Flower Asset/facebook.png" alt="facebook icon">
+                    <img src="./Flower Asset/twitter.png" alt="twitter icon">
+                    <img src="./Flower Asset/insta.png" alt="Instagram icon">
+                </div>
+            </div>
+            <div class="">
+                <h2>Lets Massage Us</h2>
+                <input type="text" placeholder="your name..."> <br>
+                <input type="email" placeholder="your email..."> <br>
+                <textarea placeholder="Massage" name="" id="" cols="30" rows="10"></textarea> <br> <br>
+                <button class="btn">Submit</button>
+            </div>
+        </section>
 
     </main>
 
     <footer>
         <h2> <span>Flower</span> Shop</h2> <br>
-        <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p> <br> <br>
+        <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when
+            looking at its layout.</p> <br> <br>
         <small>@2020-2023, FlowerShop.com. All rights reserved. </small>
     </footer>
 </body>
