--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <button class="btn">Subscribe</button>
             </div>
         </section>
-
+        <!-- This is feedback section  -->
         <section class="feedback_container">
             <div class="feedback_title">
                 <h2>Feedback</h2> <br>
@@ -141,7 +141,7 @@
         </section>
 
     </main>
-
+    <!-- This is footer section  -->
     <footer>
         <h2> <span>Flower</span> Shop</h2> <br>
         <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when
